tests/kyverno/bad-deployment-latest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-deployment-latest
spec:
  containers:
    - name: app
      image: ghcr.io/stefanprodan/podinfo:latest
