tests/kyverno/good-deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-deployment
spec:
  containers:
    - name: app
      image: ghcr.io/stefanprodan/podinfo:6.7.1
