tests/kyverno/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: widget-api-policy-tests
policies:
  - ../../policies/disallow-latest-tag.yaml
resources:
  - good-deployment.yaml
  - bad-deployment-latest.yaml
results:
  - policy: disallow-latest-tag
    rule: require-image-tag
    resources:
      - good-deployment
    kind: Pod
    result: skip

  - policy: disallow-latest-tag
    rule: require-image-tag
    resources:
      - bad-deployment-latest
    kind: Pod
    result: fail
